<resources>
    <string name="app_name">BT Car Remote</string>
    <string name="led">LED:</string>
    <string name="music">Music:</string>
    <string name="send_to_display">Send to display</string>
    <string name="settings">settings</string>
    <string name="not_connected">Not Connected</string>
    <string name="connected">Connected</string>
    <string name="connect_to_device">Connect to device</string>
    <string name="about">About</string>
    <string name="bluetooth_settings">Bluetooth Settings</string>
    <string name="_0_0">(0, 0)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="paired_devices">Paired devices</string>
    <string name="nearby_devices">Nearby devices</string>
</resources>
