<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ButtonsFragment">

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <android.support.constraint.Guideline
            android:id="@+id/guidelinehoriz20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.33"
    />
    <android.support.constraint.Guideline
            android:id="@+id/guidelinehoriz30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.66"
    />
    <android.support.constraint.Guideline
            android:id="@+id/guidelinevertical60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.6"
    />

        <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleLedButton"
                app:layout_constraintStart_toStartOf="@+id/guidelinevertical60"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guidelinehoriz20" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/led"
                android:layout_width="104dp"
                android:layout_height="29dp"
                android:id="@+id/textViewLed"
                android:textSize="24sp"
                android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guidelinehoriz20" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelinevertical60" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/music"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMusic"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guidelinehoriz20" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guidelinehoriz30"
            app:layout_constraintVertical_bias="0.52" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelinevertical60" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.01"/>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/toggleMusicButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guidelinehoriz20"
            app:layout_constraintStart_toStartOf="@+id/guidelinevertical60"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelinehoriz30"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editTextDisplay"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guidelinehoriz30" android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guidelinevertical60" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/send_to_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonSendToDisplay"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guidelinehoriz30"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="@+id/guidelinevertical60" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>